menambahkan dark mode, smooth scroll dan fixed bug

--- a/src/input.css
+++ b/src/input.css
@@ -2,23 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "inter", sans-serif;
+}
+header {
+  backdrop-filter: blur(5px);
+}
+.navbar-fixed {
+  @apply z-[9999] fixed bg-zinc-100 opacity-80 shadow-md backdrop-blur-md dark:bg-secondary dark:bg-opacity-50;
+}
+.hamburger-active > span:nth-child(1) {
+  @apply rotate-45;
+}
+.hamburger-active > span:nth-child(2) {
+  @apply scale-0;
+}
+.hamburger-active > span:nth-child(3) {
+  @apply -rotate-45;
+}
 
-body{
-  font-family:  'inter', sans-serif;
-}
-header{
-  backdrop-filter: blur(5px);
-}
-.navbar-fixed{
-  @apply z-[9999] fixed bg-zinc-100 opacity-80 shadow-md;
-  backdrop-filter: blur(5px);
-}
-.hamburger-active > span:nth-child(1){
-  @apply  rotate-45;
-}
-.hamburger-active > span:nth-child(2){
-  @apply scale-0
-}
-.hamburger-active > span:nth-child(3){
-  @apply  -rotate-45;
+#mode-toggle:checked ~ label div.toggle-circle {
+  @apply translate-x-5;
 }
